tests/baselines/reference/exponentiationOperatorWithAnyAndNumber.errors.txt
exponentiationOperatorWithAnyAndNumber.ts(6,15): error TS2454: Variable 'b' is used before being assigned.
exponentiationOperatorWithAnyAndNumber.ts(10,10): error TS2454: Variable 'b' is used before being assigned.
exponentiationOperatorWithAnyAndNumber.ts(11,15): error TS2454: Variable 'b' is used before being assigned.
exponentiationOperatorWithAnyAndNumber.ts(12,10): error TS2454: Variable 'b' is used before being assigned.
exponentiationOperatorWithAnyAndNumber.ts(12,15): error TS2454: Variable 'b' is used before being assigned.


==== exponentiationOperatorWithAnyAndNumber.ts (5 errors) ====
    var a: any;
    var b: number;
    
    // operator **
    var r1 = a ** a;
    var r2 = a ** b;
                  ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var r3 = a ** 0;
    var r4 = 0 ** a;
    var r5 = 0 ** 0;
    var r6 = b ** 0;
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var r7 = 0 ** b;
                  ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var r8 = b ** b;
             ~
!!! error TS2454: Variable 'b' is used before being assigned.
                  ~
!!! error TS2454: Variable 'b' is used before being assigned.